@@ -72,7 +72,9 @@ act (EditRaw)
 act (Borders)
 act (CornerVerts)
 act (RoundCoordinates)
-act (Visibility)
+act (VisibilityHide)
+act (VisibilityReveal)
+act (VisibilityToggle)
 act (ReplaceCoords)
 act (Flip)
 act (Demote)
